# localhost-8080

./: .env.template  .gitignore  CLAUDE.md  CLI_USER_GUIDE.md  Dashboard.md  OBSIDIAN_GUIDE.md  SUBMODULE_GUIDE.md  pyproject.toml  setup.py  skill_requirements.md
AI Agentic/.obsidian/: workspace.json
agents/.obsidian/: graph.json  workspace.json
agents/ai_systems/: context_manager.md  (+8 more)
configs/: orchestrator_config.json
memory/: api_specs.md  architecture.md  architecture_notes.md  bug_reports.md  deployment_notes.md  project_requirements.md  sprint_tasks.md  technical_decisions.md
myovoice/: index.html  package-lock.json  package.json
prompts/: orchestrator_role.md
reports/: agent_workflow_analysis.md  system_improvements_proposal.md
runtime/: __init__.py  agent_loader.py  claude_mem.py  cli.py  context_manager.py  event_bus.py  execution_engine.py  gsd_orchestrator.py  llm_provider.py  memory_manager.py  retry_handler.py  review_engine.py  task_router.py  tool_sandbox.py
skills/: cicd_skill.md  deployment_skill.md  docker_skill.md  dsp_filter_expert_skill.md  fastapi_skill.md  git_skill.md  kubernetes_skill.md  nextjs_skill.md  postgresql_skill.md  prisma_skill.md  prompt_engineering_skill.md  rag_pipeline_skill.md  react_skill.md  supabase_skill.md  superpowers_skill.md  tailwind_skill.md  vercel_skill.md
workflows/: ai_agent_pipeline.yaml  bug_fix_pipeline.yaml  deployment_pipeline.yaml  dsp_feature_pipeline.yaml  orchestrator_simulation.yaml  production_workflow_guide.md  review_pipeline.yaml  skill_generation_pipeline.yaml  website_generation.yaml
(+35 files in other folders)
