[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agentic"
version = "0.1.0"
description = "AI Agentic Operating System (AIOS) CLI"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "openai",
    "python-dotenv",
]

[project.scripts]
aios = "runtime.cli:main"
